tests/fixtures/valid_programs/arithmetic.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // Basic arithmetic
    const x: int = 10;
    const y: int = 20;
    const sum: int = x + y;
    const diff: int = x - y;
    const prod: int = x * y;
    const div: int = y / x;
    const mod: int = y % x;
    
    IO::println("Arithmetic Operations Test:");
    IO::print_int(sum);   // 30
    IO::print_int(diff);  // -10
    IO::print_int(prod);  // 200
    IO::print_int(div);   // 2
    IO::print_int(mod);   // 0
    
    return 0;
}