tests/fixtures/invalid_programs/type_error_arith.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    const x: int = 10;
    const y: string = "hello";
    
    // Type error: trying to add int and string
    const result: int = x + y;  // Should cause type error
    
    return 0;
}